--- a/index.html
+++ b/index.html
@@ -1358,7 +1358,81 @@
       </section>
   
       <span id="Rocket">
-         <img src="./SVG/Rocket.svg" style="width:100%">
+         <svg width="15vw" viewBox="0 0 137 338" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path opacity="0.8" d="M114.177 250.19L135.908 322.687" stroke="#99A2D2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+            <path opacity="0.8" d="M113.001 261.973L121.324 289.738" stroke="#FBB884" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+            <path opacity="0.8" d="M104.933 270.919L117.919 314.248" stroke="#FBB884" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+            <path opacity="0.8" d="M103.757 282.705L112.08 310.468" stroke="#99A2D2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+            <path opacity="0.8" d="M122.548 294.531L130.871 322.296" stroke="#99A2D2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+            <path opacity="0.8" d="M96.4131 267.942L106.053 300.101L113.158 323.798" stroke="#FBB884" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+            <path opacity="0.8" d="M105.803 256.943L115.444 289.102L122.548 312.797" stroke="#FBB884" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+            <path opacity="0.8" d="M96.5645 277.673L111.557 327.692" stroke="#99A2D2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+            <path opacity="0.8" d="M66.9312 263.957L88.6624 336.454" stroke="#FBB884" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+            <path opacity="0.8" d="M65.7554 275.74L74.0784 303.505" stroke="#99A2D2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+            <path opacity="0.8" d="M48.3799 263.573L53.8108 281.683" stroke="#99A2D2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+            <path opacity="0.8" d="M58.563 270.71L76.4001 330.215" stroke="#99A2D2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+            <path opacity="0.8" d="M56.6753 278.541L69.662 321.867" stroke="#FBB884" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+            <path opacity="0.8" d="M56.5142 296.471L64.8372 324.234" stroke="#99A2D2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+            <path opacity="0.8" d="M49.1675 281.708L57.5409 309.635L63.7088 330.215" stroke="#99A2D2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+            <path opacity="0.8" d="M49.3188 291.439L59.4967 325.388" stroke="#FBB884" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+            <path d="M0.251354 22.4046L2.91383 3.22982C3.33528 0.201429 7.11318 -0.941778 9.1422 1.34718L22.1138 15.9869C23.9359 18.0437 25.2684 20.4892 26.0104 23.134L31.7037 43.4722C29.1094 49.4961 30.2324 55.2626 33.5687 58.4324C34.2804 59.1087 34.6312 59.8608 36.4331 60.368C50.2173 109.615 64.1075 159.235 77.8917 208.482L52.7384 215.523C38.9189 166.152 25.0993 116.779 11.2797 67.409C12.0595 66.3264 12.6248 64.5976 12.8545 63.727C15.9611 56.2797 7.89297 50.7201 6.59581 50.6746C4.64754 43.7144 2.6993 36.7541 0.751034 29.7964C0.0772169 27.3939 -0.0918633 24.8778 0.251354 22.4046Z" fill="url(#paint0_linear_93_6270)"/>
+            <path d="M77.8644 208.543L52.7109 215.582L53.504 218.416L78.6574 211.376L77.8644 208.543Z" fill="#BE5323"/>
+            <path d="M60.0121 221.645L75.7674 217.236C75.9264 217.191 76.0601 217.077 76.1257 216.926L78.0993 212.426C78.2886 211.997 77.8923 211.543 77.4405 211.669L54.7705 218.013C54.2859 218.15 54.2178 218.808 54.6645 219.041L59.6058 221.605C59.732 221.668 59.8784 221.683 60.0121 221.645Z" fill="#464547"/>
+            <path d="M65.0862 227.22L73.1316 224.966L75.307 217.362L59.5518 221.774L65.0862 227.22Z" fill="black"/>
+            <path d="M75.5936 231.181L66.4023 233.754L67.6504 238.213L76.8417 235.641L75.5936 231.181Z" fill="black"/>
+            <path d="M69.7055 248.807L80.5168 245.781C80.4335 244.605 80.1433 242.584 79.0026 240.376C77.8518 238.145 76.3579 236.729 75.4393 235.979C73.5036 236.522 71.5679 237.062 69.6323 237.605C69.1679 238.713 68.5369 240.603 68.5193 243.018C68.5041 245.64 69.2133 247.677 69.7055 248.807Z" fill="black"/>
+            <path d="M91.5373 248.308L108.494 243.561C108.542 242.347 108.395 240.287 106.98 238.155C105.551 236.002 103.477 234.748 102.19 234.104C99.1537 234.955 96.1176 235.803 93.0816 236.653C92.2085 237.875 90.9668 239.937 90.5833 242.453C90.1668 245.188 90.9518 247.202 91.5373 248.308Z" fill="black"/>
+            <path d="M49.9184 94.2614L46.1758 95.3088L49.8655 108.493L53.6081 107.446L49.9184 94.2614Z" fill="black" stroke="black" stroke-width="4" stroke-miterlimit="10" stroke-linecap="round"/>
+            <path d="M102.227 225.776L87.8877 229.791L48.2007 87.9996L62.5401 83.9869L102.227 225.776Z" fill="url(#paint1_linear_93_6270)"/>
+            <path d="M102.202 225.839L87.8638 229.852L88.7507 233.021L103.089 229.008L102.202 225.839Z" fill="#BE5323"/>
+            <path d="M88.0571 238.059L106.376 232.933L103.249 228.908L88.9101 232.921L88.0571 238.059Z" fill="#464547"/>
+            <path d="M75.5669 224.338L62.8735 227.89L64.6514 234.243L77.3447 230.69L75.5669 224.338Z" fill="#BE5323"/>
+            <path d="M76.5057 134.023L62.167 138.035L63.2144 141.778L77.5531 137.765L76.5057 134.023Z" fill="#BE5323"/>
+            <path d="M78.223 140.156L63.8843 144.169L64.1767 145.214L78.5154 141.201L78.223 140.156Z" fill="black"/>
+            <path d="M64.1258 89.7853L49.7871 93.798L50.0796 94.8431L64.4182 90.8303L64.1258 89.7853Z" fill="#BE5323"/>
+            <path d="M61.7452 256.646L44.7888 261.393C44.1175 260.381 43.1736 258.543 43.2746 255.987C43.378 253.405 44.4986 251.258 45.2658 250.036C48.3017 249.186 51.3376 248.338 54.3736 247.487C55.7541 248.078 57.8841 249.196 59.5194 251.147C61.296 253.269 61.672 255.399 61.7452 256.646Z" fill="black"/>
+            <path d="M21.0103 116.469L24.7529 115.421L21.0632 102.237L17.3206 103.284L21.0103 116.469Z" fill="black" stroke="black" stroke-width="4" stroke-miterlimit="10" stroke-linecap="round"/>
+            <path d="M40.9127 242.94L55.2521 238.927L15.5625 97.1352L1.22559 101.148L40.9127 242.94Z" fill="url(#paint2_linear_93_6270)"/>
+            <path d="M41.8269 246.049L56.1655 242.036L55.2786 238.867L40.94 242.879L41.8269 246.049Z" fill="#BE5323"/>
+            <path d="M59.3983 246.082L41.0815 251.21L41.6645 246.145L56.0039 242.132L59.3983 246.082Z" fill="#464547"/>
+            <path d="M29.5281 147.169L15.1895 151.181L16.2369 154.924L30.5755 150.911L29.5281 147.169Z" fill="#BE5323"/>
+            <path d="M31.2464 153.302L16.9077 157.315L17.2002 158.36L31.5388 154.347L31.2464 153.302Z" fill="black"/>
+            <path d="M17.1209 102.828L2.78223 106.84L3.07468 107.885L17.4134 103.873L17.1209 102.828Z" fill="#BE5323"/>
+            <path d="M11.2778 67.4115L36.4311 60.3705" stroke="url(#paint3_linear_93_6270)" stroke-width="4" stroke-miterlimit="10" stroke-linecap="round"/>
+            <path d="M2.99219 37.8039L28.1455 30.7629" stroke="url(#paint4_linear_93_6270)" stroke-width="4" stroke-miterlimit="10" stroke-linecap="round"/>
+            <path d="M2.00537 34.2834L27.1587 27.2425" stroke="url(#paint5_linear_93_6270)" stroke-width="4" stroke-miterlimit="10" stroke-linecap="round"/>
+            <path d="M25.0833 64.427L23.02 65.0044L63.9079 211.108L65.9711 210.531L25.0833 64.427Z" fill="black" stroke="black" stroke-width="4" stroke-miterlimit="10" stroke-linecap="round"/>
+            <defs>
+            <linearGradient id="paint0_linear_93_6270" x1="38.9836" y1="215.524" x2="38.9836" y2="0.13678" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#747577"/>
+            <stop offset="1" stop-color="#D3D5D6"/>
+            </linearGradient>
+            <linearGradient id="paint1_linear_93_6270" x1="48.2006" y1="156.889" x2="102.227" y2="156.889" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#747577"/>
+            <stop offset="1" stop-color="#D3D5D6"/>
+            </linearGradient>
+            <linearGradient id="paint2_linear_93_6270" x1="1.22437" y1="170.037" x2="55.2511" y2="170.037" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#747577"/>
+            <stop offset="1" stop-color="#D3D5D6"/>
+            </linearGradient>
+            <linearGradient id="paint3_linear_93_6270" x1="10.7689" y1="67.6031" x2="36.8947" y2="60.2917" gradientUnits="userSpaceOnUse">
+            <stop/>
+            <stop offset="0.1413"/>
+            <stop offset="1"/>
+            </linearGradient>
+            <linearGradient id="paint4_linear_93_6270" x1="2.48262" y1="37.9956" x2="28.6084" y2="30.6841" gradientUnits="userSpaceOnUse">
+            <stop/>
+            <stop offset="0.1413"/>
+            <stop offset="1"/>
+            </linearGradient>
+            <linearGradient id="paint5_linear_93_6270" x1="1.49738" y1="34.4753" x2="27.6232" y2="27.1639" gradientUnits="userSpaceOnUse">
+            <stop/>
+            <stop offset="0.1413"/>
+            <stop offset="1"/>
+            </linearGradient>
+            </defs>
+            </svg>
+            
       </span>
     
       <section id="LowEarthText" onclick="hideLowEarthText()">
@@ -1446,7 +1520,7 @@
    </div>
  
 <div onclick="AirplaneText()">
-   <svg id="Airplane" width="500"  viewBox="0 0 314 72" fill="none" xmlns="http://www.w3.org/2000/svg">
+   <svg id="Airplane" width="30vw"  viewBox="0 0 314 72" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M170.12 57.3473H167.414V63.9264H170.12V57.3473Z" stroke="black" stroke-width="0.5" stroke-miterlimit="10"/>
       <path d="M19.3359 44.6381H72.2546H255.783C262.45 44.6381 269.123 45.312 275.651 46.6722C301.322 52.0224 314.084 56.946 313.938 61.4457C313.875 63.3612 311.477 65.1984 306.743 66.9574C303.172 68.2848 299.374 68.9284 295.563 68.9738L75.0028 71.7145L19.3359 44.6381Z" fill="url(#paint0_linear_93_6509)"/>
       <path d="M14.5684 0.706238L70.8889 44.6381H17.9728L1.79614 0.706238H14.5684Z" fill="url(#paint1_linear_93_6509)"/>
