--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <title>Triumf Background Radiation Page</title>
    <link rel="stylesheet" href="./style.css">
    <script src="./lottie.js"></script>
+   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
    <script src="./data.js"></script>
 
 
@@ -2187,7 +2188,7 @@
          <span id="Particle">
             <svg width="65vw" viewBox="0 0 3248 4716" fill="none" xmlns="http://www.w3.org/2000/svg">
                <g id="ParticleShower ">
-                  <g id="pthird">
+                  <g id="pthird" class="pThird">
                      <path id="pline15" d="M67.7002 4295.9L398.6 4066.9" stroke="#FDC571" stroke-width="6"
                         stroke-miterlimit="10" stroke-linecap="round" />
                      <path id="pline14"
@@ -2297,7 +2298,7 @@
                         d="M2615.5 3139.9L2622.5 3142.6M2651.6 3153.5L3159.5 3344.2M3174 3349.7L3181 3352.3"
                         stroke="#FDC571" stroke-width="6" stroke-miterlimit="10" stroke-linecap="round" />
                   </g>
-                  <g id="psecond">
+                  <g id="psecond" class="pSecond">
                      <path id="pline4" d="M398.6 4066.9L1717 2480.4" stroke="#FDC571" stroke-width="6"
                         stroke-miterlimit="10" stroke-linecap="round" />
                      <path id="pline3" d="M1717 2480.4L1608.6 2890.2" stroke="#FDC571" stroke-width="6"
@@ -2307,7 +2308,7 @@
                      <path id="pline1" d="M2615.5 3139.9L2180.4 2842.4L1717 2480.4" stroke="#FDC571" stroke-width="6"
                         stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="bevel" />
                   </g>
-                  <path id="pmain"
+                  <path id="pmain" class="pMain"
                      d="M1718 2480.3C1643.4 2310.9 1433.3 1775.1 1595.8 1112.3C1734.9 545 2070.6 195.9 2212.8 63.2"
                      stroke="#FDC571" stroke-width="6" stroke-miterlimit="10" stroke-linecap="round" />
                </g>
