--- a/index.html
+++ b/index.html
@@ -2308,7 +2308,7 @@
                      <path id="pline1" d="M2615.5 3139.9L2180.4 2842.4L1717 2480.4" stroke="#FDC571" stroke-width="6"
                         stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="bevel" />
                   </g>
-                  <path id="pmain" class="pMain"
+                  <path id="pmain" class="pMain Show"
                      d="M1718 2480.3C1643.4 2310.9 1433.3 1775.1 1595.8 1112.3C1734.9 545 2070.6 195.9 2212.8 63.2"
                      stroke="#FDC571" stroke-width="6" stroke-miterlimit="10" stroke-linecap="round" />
                </g>
