--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
       <img class="sideline" src="./img/sideline.png">
-
+      <p id="h4" class="sidetext">RADIATION FLUX</p>
       <div class="header">
          <img class="homebutton" src="./icon/TRIUMF_Logo_DOL.svg" style="width: 305px; padding: 20px 10px">
          <img class="menubutton" src="./icon/Menuicon.svg" style="height: 14px; padding: 29px 20px; float: right;">
