--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </p>
          </section>
          <div id="sunanim" onclick="displayRadiationText()">
-            <svg class="sun" width="23vw" viewBox="0 0 1306 1262" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="sun" width="25vw" viewBox="0 0 1306 1262" fill="none" xmlns="http://www.w3.org/2000/svg">
                <g id="sun">
                   <g id="outsideray">
                      <path
@@ -1138,7 +1138,7 @@
          <img id="Skylayer2" src="./SVG/skylayer2.svg" style="width: 100%;">
 
          <section id="Planet1">
-            <svg width="30vw"  viewBox="0 0 600 400" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="20vw"  viewBox="0 0 600 400" fill="none" xmlns="http://www.w3.org/2000/svg">
                <g id="Planet1">
                <g id="bgplanets">
                <path id="Vector" opacity="0.75" d="M352.827 277.829C366.79 277.829 378.109 266.51 378.109 252.547C378.109 238.584 366.79 227.265 352.827 227.265C338.864 227.265 327.545 238.584 327.545 252.547C327.545 266.51 338.864 277.829 352.827 277.829Z" fill="url(#paint0_radial_476_9)"/>
@@ -1365,7 +1365,7 @@
 
          </span>
          <div id="Satellite" onclick="displayDeepSpaceText()">
-            <svg width="30vw" viewBox="-800 0 1700 434" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="32vw" viewBox="-800 0 1700 434" fill="none" xmlns="http://www.w3.org/2000/svg">
                <g id="Satellite">
                   <g id="satantenna">
                      <path id="Vector" d="M223.4 150.2L11.2 382.2" stroke="url(#paint0_linear_2_42)" stroke-width="4"
@@ -1954,7 +1954,7 @@
 
 
          <span id="Powerstation" onclick="displayLowEarthText()">
-            <svg width="8vw" viewBox="0 0 862 465" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="13vw" viewBox="0 0 862 465" fill="none" xmlns="http://www.w3.org/2000/svg">
                <g id="Powerstation1" clip-path="url(#clip0_463_8)">
                <g id="powermain">
                <path id="Vector" d="M130.5 448.4L65.7 464.1L0 192.6L64.8 176.9L130.5 448.4Z" fill="url(#paint0_linear_463_8)"/>
@@ -2153,10 +2153,10 @@
             </p>
          </section>
 
-         <span id="Rocket">
-            <svg width="10vw"  viewBox="0 0 583 1364" fill="none" xmlns="http://www.w3.org/2000/svg">
+         <span id="Rocket" class="Rocket">
+            <svg width="8vw"  viewBox="0 0 583 1364" fill="none" xmlns="http://www.w3.org/2000/svg">
                <g id="Rocket">
-               <g id="afterburn">
+               <g id="afterburn" class="afterburn">
                <g id="Layer_48">
                <path id="Vector" opacity="0.8" d="M474.7 1000.4L560.8 1287.7" stroke="#98A1D1" stroke-width="4" stroke-miterlimit="10" stroke-linecap="round"/>
                </g>
@@ -2435,7 +2435,7 @@
                <path id="mtn2" d="M724.685 192.25C638.376 150.92 579.542 151.667 538.588 161.235C478.781 175.203 448.693 205.075 387.901 199.2C358.179 196.328 340.823 187.561 309.322 194.569C272.643 202.731 261.611 222.923 234.133 235.397C207.795 247.354 165.231 255.993 96.2307 224.477C106.999 215.96 115.772 205.681 121.244 201.025C146.497 179.546 154.743 170.098 173.362 160.48C176.042 159.094 182.532 155.849 191.305 152.659C208.057 146.567 222.073 144.695 231.385 143.725C253.576 141.419 264.672 140.263 291.421 142.506C354.193 147.771 451.152 79.43 523.852 73.03C569.305 69.03 634.113 87.1878 724.685 192.25Z" fill="url(#paint1_linear_16_1190)"/>
                <path id="mtn1" opacity="0.6" d="M1115.03 266.698C1109.23 270.86 1100.03 276.015 1088.31 276.72C1064.69 278.143 1056.47 259.316 1036.34 260.301C1012.39 261.472 1008.48 288.879 989.383 287.713C966.828 286.337 963.334 247.586 935.695 243.814C921.239 241.84 916.333 251.642 900.262 249.356C883.321 246.946 872.296 234.249 864.491 223.062C889.081 214.574 907.626 208.954 921.168 203.98C947.05 194.468 955.929 190.289 970.899 190.771C987.954 191.319 1001.19 195.912 1014.95 205.053C1039.22 221.176 1039.74 225.075 1068.11 243.105C1083.99 253.197 1105.73 263.18 1115.03 266.698Z" fill="url(#paint2_linear_16_1190)"/>
                </g>
-               <g id="Train">
+               <g id="Train" class="Train">
                <path id="Vector" d="M1064.74 385.415H1197.21V343.873H1064.74V385.415Z" fill="url(#paint3_linear_16_1190)"/>
                <path id="Vector_2" d="M1159.8 384.77H1189.2V380.384H1159.8V384.77Z" fill="black" stroke="black" stroke-width="0.5" stroke-miterlimit="10"/>
                <path id="Vector_3" d="M1079.46 384.77H1108.86V380.384H1079.46V384.77Z" fill="black" stroke="black" stroke-width="0.5" stroke-miterlimit="10"/>
@@ -4215,7 +4215,7 @@
                </mask>
                <g mask="url(#mask0_16_1190)">
                </g>
-               <g id="Car">
+               <g id="Car" class="Car">
                <path id="Vector_1715" d="M127.556 703.347H89.0874V737.565H127.556V703.347Z" fill="url(#paint1254_linear_16_1190)"/>
                <path id="Vector_1716" d="M222.021 676.157C216.686 667.809 206.422 654.403 189.138 645.209C171.265 635.703 155.283 635.9 126.268 636.19C106.748 636.384 95.1793 636.634 82.2682 643.342C70.1269 649.648 59.0783 660.48 57.1124 662.431C52.6354 666.875 49.2411 670.948 46.9017 673.964C41.8392 677.538 33.6903 684.268 27.0455 695.231C21.3571 704.614 19.0001 713.421 17.9351 719.17C16.0625 720.104 13.2789 721.828 10.9117 724.876C5.61205 731.703 6.63668 739.718 6.90419 741.477C17.7509 741.648 28.595 741.82 39.4417 741.992H233.435C251.576 741.992 269.718 741.992 287.858 741.992C290.2 739.942 292.54 737.896 294.882 735.847L304.098 735.407V728.384H297.514C297.37 724.854 296.759 719.587 294.377 713.815C287.005 695.95 268.943 688.417 257.748 683.748C250.329 680.657 238.117 676.644 222.021 676.157Z" fill="url(#paint1255_linear_16_1190)"/>
                <path id="Vector_1717" d="M243.931 694.978C236.373 692.377 224.895 688.98 210.563 686.946C204.973 686.153 196.62 685.234 167.5 685.234C147.091 685.232 136.888 685.232 128.355 685.805C114.551 686.731 95.0882 688.997 71.7393 694.981L88.9557 741.994H214.023L243.931 694.978Z" fill="#7B2F62"/>
