--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="ie=chrome=1">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
+   <meta name="apple-mobile-web-app-capable" content="yes" />
    <title>Triumf Background Radiation Page</title>
    <link rel="stylesheet" href="./style.css">
    <script src="./data.js"></script>
