--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <div id="overlay"></div>
 
-      <div class="gridsystem1">
+      <div id="gridsystem1" class="paused">
         <section id="RadiationText" onclick="hideRadiationText()">
          <div class = "en">
             <p id="h3">Radiation Environments</p>
@@ -1162,7 +1162,7 @@
 
          </section>
 
-         <section id="Asteroid">
+         <section id="Asteroid" class="notransition">
             <img src="./SVG/asteroid.svg"></img>
          </section>
 
@@ -2400,7 +2400,7 @@
          </section>
 
       </div>
-      <div class="gridsystem2">
+      <div id="gridsystem2" class="paused">
          <div class="topright">
             <section id="GroundLevel" onclick="hideGroundLevelText()">
             <div class="en">
