--- a/index.html
+++ b/index.html
@@ -24,26 +24,35 @@
 
 
  <div class="modal" id="modal">
-      <div class="modal-header" id="h3" style="margin-top: 15px;padding-bottom: 0px;">
-        <div></div>
-        <div class="h3" style=" text-align: center">Background Radiation</div>
+      <div class="modal-header"  style="margin-top: 15px;padding-bottom: 0px;">
+          <div class="language-buttons">
+          <p class="modalText" onclick="changeEnglish()">English</p>
+          <p class="modalText">|</p>
+          <p class="modalText" onclick="changeFrench()">Français</p>
+          </div>
+       
         <button onclick="closeModal()" class="close-button">&times;</button>
       </div>
       <div class="modal-welcome" style="padding-top: 0px;">
+       <h3>Radiation Environments</h3>
       <div class="en">
-            <p>This artwork illustrates the sources, the types, and the intensity of the background radiation that is present in natural environments of interest for the scientist-users of TRIUMF.  
+      <p>
+Click on the animated objects to learn more about background radiation at its elevation in the atmosphere. <br><br>
+This artwork illustrates the sources, the types, and the intensity of the background radiation that is present in natural environments of interest for the scientist-users of TRIUMF.  
   
-  The TRIUMF Irradiation Facilities (PIF & NIF) operate beamline infrastructure that enables commercial and research use of protons and neutrons beams of various energies to a wide community of users from around the world.  <br><br>
+The TRIUMF Irradiation Facilities (PIF & NIF) operate beamline infrastructure that enables commercial and research use of protons and neutrons beams of various energies to a wide community of users from around the world.  <br><br>
   
-  Electronic components can be damaged and fail when energetic particles in the environment interact with the atoms of the material in the components.  The proton and neutron beams of the TRIUMF Irradiation Facilities reproduce the natural environment but at a much higher intensity, to quickly check if and how electronic components are likely to fail.  For example, the total radiation dose of a 5-year space mission can be achieved in just a few hours, without needing to go to space! <br><br>
+Electronic components can be damaged and fail when energetic particles in the environment interact with the atoms of the material in the components.  The proton and neutron beams of the TRIUMF Irradiation Facilities reproduce the natural environment but at a much higher intensity, to quickly check if and how electronic components are likely to fail.  For example, the total radiation dose of a 5-year space mission can be achieved in just a few hours, without needing to go to space! <br><br>
  
-  For nearly 25 years, one of these beamlines was used to extract a lower energy proton beam from TRIUMF’s main cyclotron for the proton radiotherapy clinical treatment of severe cases of ocular melanoma, in collaboration with BC Cancer and UBC Ophthalmology. This was the first clinical use of proton beams for cancer treatment in Canada.<br><br>
+For nearly 25 years, one of these beamlines was used to extract a lower energy proton beam from TRIUMF’s main cyclotron for the proton radiotherapy clinical treatment of severe cases of ocular melanoma, in collaboration with BC Cancer and UBC Ophthalmology. This was the first clinical use of proton beams for cancer treatment in Canada.<br><br>
   
-  In 2021, this infographic was awarded a Registered Graphic Designers, RGD In-House award for Science Communication Design. <br><br>
+In 2021, this infographic was awarded a Registered Graphic Designers, RGD In-House award for Science Communication Design. <br>
   
-  Click on the animated objects to learn more about background radiation at its elevation in the atmosphere. <br></p>
-  </div>
-  <div class="fr"><p>Cette illustration présente un aperçu des sources, des types et de l’intensité de la radioactivité naturelle présente dans divers environnements qui intéressent les scientifiques-utilisateurs de TRIUMF. <br><br>
+</p>
+</div>
+  <div class="fr"><p>
+  Click on the animated objects to learn more about background radiation at its elevation in the atmosphere. <br><br>
+  Cette illustration présente un aperçu des sources, des types et de l’intensité de la radioactivité naturelle présente dans divers environnements qui intéressent les scientifiques-utilisateurs de TRIUMF. <br><br>
 
   Les installations d’irradiation PIF & NIF de TRIUMF comportent des lignes de faisceau aux protons et aux neutrons de diverses énergies. Elles sont utilisées à des fins commerciales ou de recherche par une vaste communauté d’utilisateurs qui viennent de partout dans le monde.<br><br>
   
@@ -53,7 +62,7 @@
 
   En 2021, l’illustration a remporté un prix “RGD In-House Award” de la “Association of Registered Graphic Designers” du Canada dans la catégorie “Science Communication Design”.</p></div>
 
-  <div class="language-buttons"><p id="TextBody" onclick="changeEnglish()">English</p><p>&nbsp|&nbsp</p><p id="TextBody" onclick="changeFrench()">Français</p></div>
+
       </div>
     </div>
     <div id="overlay"></div>
