fixed text and interactive elements

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <img class="sideline" src="./img/sideline.png">
       <p id="h4" class="sidetext">RADIATION FLUX</p>
       <div class="header">
-         <img class="homebutton" src="./icon/TRIUMF_Logo_DOL.svg" style="width: 305px; padding: 20px 10px">
-         <img class="menubutton" src="./icon/Menuicon.svg" style="height: 14px; padding: 29px 20px; float: right;">
+         <a href ="https://discoverourlab.triumf.ca" class="homebutton"><img src="./icon/TRIUMF_Logo_DOL.svg" style="width: 305px; padding: 20px 10px"></a>
+        
    
       </div>
 
@@ -75,7 +75,7 @@ In 2021, this infographic was awarded a Registered Graphic Designers, RGD In-Hou
                radiation belt.
             </p></div>
             <div class = "fr">
-            <p id="h3">LE RAYONNEMENT RADIOACTIF DANS DIVERS ENVIRONNEMENTS</p><p id="TextBody">La radiation environnementale naturelle provient de plusieurs sources telles que le rayonnement cosmique extragalactique, le vent solaire et les ceintures de radiation qui encerclent la Terre.
+            <p id="h3">LE RAYONNEMENT RADIOACTIF <br>DANS DIVERS ENVIRONNEMENTS</p><p id="TextBody">La radiation environnementale naturelle provient de plusieurs sources telles que le rayonnement cosmique extragalactique, le vent solaire et les ceintures de radiation qui encerclent la Terre.
             </p></div>
          </section>
          <div id="sunanim" onclick="displayRadiationText()">
@@ -1171,7 +1171,7 @@ In 2021, this infographic was awarded a Registered Graphic Designers, RGD In-Hou
 
          </section>
 
-         <section id="Asteroid" class="notransition">
+         <section id="Asteroid" class="notransition" onclick="displayRadiationText()">
             <img src="./SVG/asteroid.svg"></img>
          </section>
 
@@ -1179,7 +1179,7 @@ In 2021, this infographic was awarded a Registered Graphic Designers, RGD In-Hou
 
          <img id="Skylayer2" src="./SVG/skylayer2.svg" style="width: 100%;">
 
-         <section id="Planet1">
+         <section id="Planet1" onclick="displayGeoText()">
             <svg width="20vw"  viewBox="0 0 600 400" fill="none" xmlns="http://www.w3.org/2000/svg">
                <g id="Planet1">
                <g id="bgplanets">
@@ -2207,7 +2207,7 @@ In 2021, this infographic was awarded a Registered Graphic Designers, RGD In-Hou
             </div>
          </section>
 
-         <span id="Rocket" class="Rocket">
+         <span id="Rocket" class="Rocket" onclick="displayLowEarthText()">
             <svg width="8vw"  viewBox="0 -100 583 1464" fill="none" xmlns="http://www.w3.org/2000/svg">
                <g id="Rocket">
                <g id="afterburn" class="afterburn">
@@ -2333,7 +2333,7 @@ In 2021, this infographic was awarded a Registered Graphic Designers, RGD In-Hou
             </p>
             </div>
              <div class="fr">
-            <p id="TextTitle">EN ORBITE TERRESTRE BASSE</p>
+            <p id="TextTitle">EN ORBITE <br>TERRESTRE BASSE</p>
             <p id="TextBody">jusqu’à 100 000 particules/cm<sup>2</sup>/h, surtout des protons et des électrons
             </p>
             </div>
